<resources>
    <string name="app_name">MT</string>
    <string name="action_settings">Settings</string>
    <string name="action_tabs">Tabs</string>
    <string name="download_settings">Download Settings</string>
    <string name="remote_download">Download To …</string>
    <string name="copy_link">Copy Torrent Link</string>
    <string name="open_link">Open in Browser</string>
    <string name="base_url">Base Url</string>
    <string name="api_url">API Url</string>
    <string name="remote_name">Name</string>
    <string name="remote_url">Remote Url</string>
    <string name="remote_username">Username</string>
    <string name="remote_password">Password</string>
    <string name="remote_path">Download Path</string>
    <string name="download_host_empty">Remote url can not be empty</string>
    <string name="download_host_invalid">Remote url is invalid</string>
    <string name="add_failure">add failure</string>
    <string name="add_success">add success</string>
    <string name="need_download_setting">Download Settings not configured</string>
    <string name="go_download_setting">Setting</string>
    <string name="action_checking_version">Checking Version</string>
    <string name="action_search">Search</string>
    <string name="action_login">Sign In</string>
    <string name="search_filter">Filters</string>
    <string name="tab_options">Options</string>
    <string name="tab_label">Label</string>
    <string name="tab_deleted">Deleted</string>
    <string name="tab_edit">Edit Tab</string>
    <string name="tab_title">title</string>
    <string name="tab_title_empty">Title cannot be empty</string>
    <string name="undo_action">UNDO</string>
    <string name="list_style">List Style</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="copy_done">Copy Success</string>
    <string-array name="list_columns">
        <item>Single Column</item>
        <item>Double Column</item>
        <item>Triple Column</item>
    </string-array>
    <string name="loading_error_toast">Oops! Something went wrong…</string>
    <string name="loading_error">LOADING ERROR</string>
    <string name="no_data">NO DATA LOADED</string>
    <string name="action_delete">Delete</string>
    <string name="action_duplicate">Duplicate</string>
    <string name="deleted">Deleted</string>
    <string name="downloading">Downloading...</string>
    <string name="checking_version">Checking new version…</string>
    <string name="no_new_version">No new version found</string>
    <string name="new_version">There is a new version can upgrade</string>
    <string name="download_new_version">Download</string>
    <string name="comment_list">Comment (%1$s)</string>
    <string name="comment">Comment</string>
    <string name="no_comment">No Comments</string>
    <string name="edit_download_node">Download Node</string>
    <string name="download_client">Client</string>
    <string name="download_name_empty">Name cannot be empty</string>
    <string name="retry">Retry</string>
    <string name="top_expend">Expand</string>
    <string name="top_collapse">Collapse</string>
    <string name="no_more">No More Content</string>
    <string name="no_content">Blank</string>
    <string name="label_category">Category</string>
    <string name="label_resolution">Resolution</string>
    <string name="label_video_codec">Video Codec</string>
    <string name="label_audio_codec">Audio Codec</string>
    <string name="label_team">Team</string>
    <string name="label_label">Label</string>
    <string name="label_discount">Discount</string>
    <string name="label_region">Region</string>
    <string name="api_key_guide">Please set your API Key in Settings.</string>
    <string name="file_list">File List</string>
    <string name="alternative_versions">Alternative Versions</string>
    <string name="anonymous">Anonymous</string>

    <string name="action_save_image">Save</string>
    <string name="save_image_success">Image saved to gallery</string>
    <string name="save_image_failure">Unable to save image</string>
    <string name="no_images_to_preview">No images to preview</string>
</resources>
