<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_search_filter"
        android:icon="@drawable/ic_menu_filter"
        app:showAsAction="always"
        android:title="@string/search_filter"
        android:visible="false" />
    <item
        android:id="@+id/action_tabs"
        android:orderInCategory="100"
        android:title="@string/action_tabs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_checking_version"
        android:orderInCategory="100"
        android:title="@string/action_checking_version"
        app:showAsAction="never" />
</menu>
